examples/test/testpolicy10379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10379
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key47: value22
      key36: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value15
          key10: value19
          key39: value15
      podSelector:
        matchLabels:
          key38: value25
          key48: value10
